--- a/app/src/main/res/layout/fragment_add_lead.xml
+++ b/app/src/main/res/layout/fragment_add_lead.xml
@@ -132,6 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
+                app:hint="Number"
                 app:label="Number"
                 app:layout_constraintTop_toBottomOf="@+id/spLanguage" />
 
