--- a/app/src/main/res/layout/language_item_view.xml
+++ b/app/src/main/res/layout/language_item_view.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="6dp">
+    android:paddingVertical="6dp"
+    android:id="@+id/itemView">
 
     <TextView
         android:id="@+id/tvTitle"
